base/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-db-secrets
      containers:
        - image: 665303624691.dkr.ecr.ap-southeast-2.amazonaws.com/fileops-backend:7712f5c3a459e0002adeb9c6b680616b86c5fc3f
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
          name: fileops-backend
          volumeMounts:
            - name: secrets-store-inline
              mountPath: /mnt/secrets-store
              readOnly: true
            - name: db-ca-cert-config
              mountPath: /db
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: db-secrets
        - name: db-ca-cert-config
          configMap:
            name: db-ca-cert
            items:
              - key: global-bundle.pem
                path: global-bundle.pem
