base/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: 665303624691.dkr.ecr.ap-southeast-2.amazonaws.com/fileops-frontend:5806e8339498be3c0da3da255147de2f4cac44ca
          name: fileops-frontend
          resources:
            requests:
              cpu: 200m
