base/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend-svc
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: backend
