base/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: fileops
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:665303624691:certificate/1f46184f-65c9-4edb-a449-9859d22cc33a
  name: web-alb
spec:
  ingressClassName: alb
  rules:
    - host: filesops.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
            pathType: Prefix
